# wushen-core

./: .gitignore  AGENTS.md  Cargo.toml  Makefile
.beads/: issues.jsonl
.github/workflows/: release.yml
doc/: ARCHITECTURE.md  事件系统.md  修行系统.md  公式变量.md  战斗系统.md  角色系统.md
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/battle/: page.tsx
frontend/app/battle-view/: page.tsx
frontend/app/character/: page.tsx
frontend/components/: AppShell.tsx  Navbar.tsx
frontend/types/: character.ts  d3-force.d.ts  database.ts  enemy.ts  event.ts  game.ts  manual.ts  mod.ts  save.ts  trait.ts
scripts/: package.sh
src/: lib.rs  tauri_api.rs
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: app-commands.json
src-tauri/src/: commands.rs  core_commands.rs  main.rs
src/battle/: action_bar.rs  battle_calculator.rs  battle_engine.rs  battle_panel.rs  battle_record.rs  battle_state.rs  mod.rs
src/character/: json.rs  mod.rs  panel.rs  trait_manager.rs  traits.rs
src/cultivation/: attack_skill.rs  defense_skill.rs  formula.rs  internal.rs  manual.rs  manual_manager.rs  mod.rs  parser.rs  realm.rs  switching.rs
src/effect/: battle_record_template.rs  condition.rs  effect.rs  entry.rs  executor.rs  formula.rs  mod.rs  modifier.rs  parser.rs  trigger.rs
src/event/: manager.rs  mod.rs  parser.rs  reward.rs  types.rs
src/game/: mod.rs
(+71 files in other folders)
