[package]
name = "wushen-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
zip = "0.6"
ulid = "1.1"
time = { version = "0.3", features = ["formatting"] }
wushen-core = { path = ".." }
tauri-plugin-dialog = "2"
